Fixed visibility of lists collected but private to others; made colors of list-assignment dialog less hideous.

--- a/app/assets/stylesheets/common/variables.css.scss
+++ b/app/assets/stylesheets/common/variables.css.scss
@@ -112,12 +112,16 @@ $salmon-button-color: #CF2F27;
 $salmon-field-background-color: #F3DFDE;
 $salmon-link-color: #E0A09E;
 
+$green-background-color: #4B815B;
+$green-text-color: #9AB3A0;
+$green-field-background-color: #C1D3C7;
+
 @mixin div-green {
-  background-color: #4B815B;
-  color: #9AB3A0;
+  background-color: $green-background-color;
+  color: $green-text-color;
   // input[type='text'], input[type='password'], input[type='email'] {
   input.string, textarea, input[type='text'], input[type='password'], input[type='email'], ul.token-input-list-facebook {
-    background-color: #C1D3C7;
+    background-color: $green-field-background-color;
     color: #849688;
   }
   input.center-button {
